[package]
name = "waline-mini"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.5.1"
dotenvy = "0.15.7"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
sea-orm = { version = "0.12", features = [
  "sqlx-sqlite",
  "sqlx-mysql",
  "runtime-tokio-rustls",
  "macros",
] }
anyhow = "1.0.80"
jsonwebtoken = "9.2.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0"
woothee = "0.13.0"
chrono = "0.4.37"
bcrypt = "0.15.1"
md5 = "0.7.0"
pulldown-cmark = "0.10.3"
envy = "0.4.2"
