[package]
name = "waline-mini"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "=0.7.0"
actix-web = "=4.5.1"
dotenvy = "=0.15.7"
tracing = "=0.1.40"
tracing-subscriber = { version = "=0.3.17", features = ["env-filter"] }
sea-orm = { version = "1.1.2", features = [
  "sqlx-mysql",
  "sqlx-sqlite",
  "runtime-tokio-rustls",
  "macros",
  "debug-print",
] }
serde = { version = "=1.0.204", features = ["derive"] }
serde_json = "=1.0.115"
woothee = "=0.13.0"
chrono = "=0.4.37"
bcrypt = "=0.15.1"
pulldown-cmark = "=0.10.3"
envy = "=0.4.2"
helpers = { version = "=0.4.2", features = ["hash", "jwt", "time"] }
